# lapras-score-v2

./: .gitignore  CHANGELOG  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ruff.yml  run-examples.yml
doc/: 1_score_vision.md  2_why_we_publish_scoring_logic.md  3_changes_in_v2.md
examples/: calculate_e_score_v2_from_rank_info_example.py  calculate_raw_e_score_v2_example.py
lib/lapras_score_v2/: calculate_e_score_v2.py  calculate_raw_e_score_v2.py  calculate_raw_e_score_v2_detail.py
